syntax = "proto3";

import "User.proto";
import "Card.proto";

// 房间状态
enum RoomState {
  None = 0;
  Matching = 1; // 匹配
  CallLord = 3; // 叫地主
  GrabLord = 4; // 抢地主
  Raise = 5; // 加倍
  PlayHand = 6; // 出牌
  GameEnd = 7; // 游戏结束
}

// 房间
message Room {
  int32 room_id = 1;
  repeated Player players = 2; // 玩家列表
  RoomState room_state = 3; // 房间状态
  repeated Card card_list = 4; // 54张牌
  repeated Card hole_cards = 5; // 底牌
  int32 call_pos = 6; // 叫地主玩家的坐位索引
  int32 call_times = 7; // 请求叫地主的次数
  int32 base_score = 8; // 底分
  int32 multiple = 9; // 倍数
  int32 grab_times = 10; // 抢地主的次数
  int32 cur_lord_pos = 11; // 地主的位置索引
  int32 raise_times = 12; // 加倍的次数
  int32 pend_pos = 13; // 当前出牌人的坐位
  int32 monster_pos = 14; // 本轮出牌中，打出的牌为最大的玩家的坐位
  repeated Card play_cards = 15; // 当前打出的牌
}

// 匹配成功的响应
message MatchResponse {
  int32 room_id = 1;
  int32 self_pos = 2; // 自己坐位的索引
  repeated Player player = 3;
}

// 游戏结束后玩家的数据
message PlayerResult {
  bool is_win = 1; // 是否赢了
  int32 money = 2; // 加或减了多少豆子
  bool is_spring = 3; // 是否春天
  int32 pos = 4; // 玩家的坐位
  bool is_lord = 5; // 是否是地主
  string nickname = 6; // 昵称
}

// 游戏结束的响应
message GameEndResponse {
  repeated PlayerResult players = 1; // 玩家列表
  int32 base_score = 2; // 底分
  int32 multiple = 3; // 倍数
}
